build change post add to the main ts and .env

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGO_URI=mongodb+srv://admin:9-c%409d6WM%21FXjr6@cluster0.kdwif.mongodb.net/tuskerBlog?retryWrites=true&w=majority&appName=cluster0  # If using local MongoDB
 
 JWT_SECRET=tusker
+PORT=3000
