--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ MONGO_URI=mongodb+srv://admin:9-c%409d6WM%21FXjr6@cluster0.kdwif.mongodb.net/tus
 
 JWT_SECRET=tusker
 PORT=3000
+CLIENTURL=http://localhost:5173
